--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,11 @@
     "deploymentEnabled": {
       "preview": false
     }
+            "routes": [
+    {
+      "source": "/_vercel/insights/script.js",
+      "destination": "404"
+    }
     "version": 2,
     "builds": [
       {
